crates/ink/tests/ui/trait_def/fail/config_keep_attr_missing_arg.stderr
error: expected a string literal value for `keep_attr` ink! configuration argument
 --> tests/ui/trait_def/fail/config_keep_attr_missing_arg.rs:1:25
  |
1 | #[ink::trait_definition(keep_attr)]
  |                         ^^^^^^^^^
